Prevent sidebar loader scrollbar

--- a/src/shared/components/loader/SidebarLoader.scss
+++ b/src/shared/components/loader/SidebarLoader.scss
@@ -5,7 +5,6 @@
   display: flex;
   margin: 12px 0 0 10px;
   flex-direction: column;
-  height: 100%;
 
   section {
     margin-top: 45px;
@@ -33,7 +32,7 @@
 }
 
 @keyframes fade-in {
-  0%{
+  0% {
     opacity: 0.1;
   }
 
